kubernetes/project-02-ocp/grafana-demo.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: grafana-demo
  name: grafana-demo
  namespace: project-02
spec:
  host: grafana-demo.paasdc.tz.bayportfinance.com
  port:
    targetPort: 3000
  to:
    kind: Service
    name: grafana-demo
    weight: 100
  wildcardPolicy: None
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: grafana-demo.paasdc.tz.bayportfinance.com
      routerName: router
